Fix tx bugs